# OCR

./: .gitignore  CMakeLists.txt  README
src/: args.cpp  main.cpp  paddleocr.cpp  utility.cpp
